Update map links to Google Maps for locations

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="card" style="border-left: 4px solid #f08c00;">
                 <h3>🏨 JR九州Blossom酒店</h3>
                 <div style="font-size:13px; color:#666; margin-bottom:10px;">那霸市中心，近國際通與美榮橋站</div>
-                <a href="https://maps.app.goo.gl/example" target="_blank" class="map-btn">導航至飯店</a>
+                <a href="https://www.google.com/maps/search/?api=1&query=JR+Kyushu+Hotel+Blossom+Naha" target="_blank" class="map-btn">導航至飯店</a>
             </div>
             <div class="card" style="border-left: 4px solid #1971c2;">
                 <h3>✈️ Visit Japan Web</h3>
@@ -104,6 +104,7 @@
                     <div class="card">
                         <h3>🛬 抵達那霸機場 (BR112)</h3>
                         <div class="transport-info">出關約 1hr</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Naha+Airport" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -115,6 +116,7 @@
                         <h3>寄放行李 @ 飯店</h3>
                         <div class="transport-info">🚌 單軌 (機場→美榮橋)</div>
                         <span class="cost">¥2,700</span>
+                        <a href="https://www.google.com/maps/search/?api=1&query=JR+Kyushu+Hotel+Blossom+Naha" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -125,6 +127,7 @@
                     <div class="card">
                         <h3>🍱 牧志公設市場</h3>
                         <div class="transport-info">🚶 步行 10-15分</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Makishi+Public+Market" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -135,6 +138,7 @@
                     <div class="card">
                         <h3>🛍️ 國際通 / 唐吉訶德</h3>
                         <div class="transport-info">飯店就在附近</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Don+Quijote+Kokusai+Street" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -145,6 +149,7 @@
                     <div class="card">
                         <h3>🥩 琉球之牛 (需預約)</h3>
                         <div class="transport-info">頂級燒肉晚餐</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Ryukyu+no+Ushi+Naha+Kokusai+Dori" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
             </div>
@@ -174,6 +179,7 @@
                     <div class="card">
                         <h3>🌊 古宇利島</h3>
                         <div class="transport-info">古宇利大橋 / 海洋塔</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Kouri+Ocean+Tower" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -184,6 +190,7 @@
                     <div class="card">
                         <h3>🍍 名護鳳梨園</h3>
                         <div class="transport-info">搭乘無人遊園車</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Nago+Pineapple+Park" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -194,6 +201,7 @@
                     <div class="card">
                         <h3>🐘 萬座毛 (象鼻岩)</h3>
                         <div class="transport-info">絕美海景懸崖</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Manzamo" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -204,6 +212,7 @@
                     <div class="card">
                         <h3>🛒 UNION SUKARA 超市</h3>
                         <div class="transport-info">24H 當地超市補貨</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Fresh+Plaza+Union+Naha" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
             </div>
@@ -224,6 +233,7 @@
                         <h3>🏯 首里城公園</h3>
                         <div class="transport-info">🚌 單軌 (美榮橋→首里)</div>
                         <span class="cost">¥3,060</span>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Shuri+Castle" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -236,6 +246,7 @@
                         <div class="transport-info">🚌 單軌轉高速巴士 152</div>
                         <span class="cost">¥8,910</span>
                         <div style="margin-top:5px; font-size:12px; color:#888;">沖繩最大購物中心</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Aeon+Mall+Okinawa+Rycom" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -248,6 +259,7 @@
                         <div class="transport-info">🚌 巴士 96號</div>
                         <span class="cost">¥3,240</span>
                         <div style="margin-top:5px; font-size:12px; color:#888;">夕陽海灘 / 異國風情晚餐</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=American+Village+Okinawa" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -288,6 +300,7 @@
                         <h3>⛩️ 波上宮</h3>
                         <div class="transport-info">🚶 步行或計程車</div>
                         <div style="margin-top:5px; font-size:12px; color:#888;">懸崖上的神社</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Naminoue+Shrine" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -300,6 +313,7 @@
                         <div class="transport-info">🚌 巴士 TK02</div>
                         <span class="cost">¥3,150</span>
                         <div style="margin-top:5px; font-size:12px; color:#888;">希臘風建築 / 看飛機起降</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Umikaji+Terrace+Senagajima" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -311,6 +325,7 @@
                         <h3>🛍️ Outlet Mall Ashibinaa</h3>
                         <div class="transport-info">🚌 巴士 TK02 (往南)</div>
                         <div style="margin-top:5px; font-size:12px; color:#888;">最後衝刺購物</div>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Ashibinaa+Outlet+Mall" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
