Enhance itinerary with new activity cards and links
Added various itinerary cards for activities including check-in, dining, shopping, and transportation. Updated transport information and links for better navigation.

--- a/index.html
+++ b/index.html
@@ -163,14 +163,36 @@
                     </div>
                 </div>
 
+                <div class="card-wrapper t-stay">
+                    <span class="time-label">15:30</span>
+                    <span class="type-tag">Check-in</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🏨 回飯店 Check-in</h3>
+                        <div class="transport-info">🚶 步行</div>
+                         <a href="https://www.google.com/maps/search/?api=1&query=JR+Kyushu+Hotel+Blossom+Naha" target="_blank" class="map-btn">Google Maps</a>
+                    </div>
+                </div>
+
                 <div class="card-wrapper t-food">
                     <span class="time-label">18:00</span>
                     <span class="type-tag">晚餐</span>
                     <div class="dot"></div>
                     <div class="card">
                         <h3>🥩 焼肉 琉球の牛 那覇久茂地</h3>
-                        <div class="transport-info">需預約</div>
+                        <div class="transport-info">🚶 步行</div>
+                        <div style="margin-top:5px; font-size:12px; color:#e03131; font-weight:bold;">已預約 18:00 (9人: 4+5)</div>
                         <a href="https://maps.app.goo.gl/qPNXd8BFCqCVH64Y9" target="_blank" class="map-btn">Google Maps</a>
+                    </div>
+                </div>
+
+                 <div class="card-wrapper t-spot">
+                    <span class="time-label">20:00</span>
+                    <span class="type-tag">散步</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🚶 飯後散步 / 買甜點</h3>
+                        <div class="transport-info">步行</div>
                     </div>
                 </div>
             </div>
@@ -232,8 +254,9 @@
                     <div class="dot"></div>
                     <div class="card">
                         <h3>🛒 UNION SUKARA 超市</h3>
-                        <div class="transport-info">24H 當地超市補貨</div>
-                        <a href="https://www.google.com/maps/search/?api=1&query=Fresh+Plaza+Union+Naha" target="_blank" class="map-btn">Google Maps</a>
+                        <div class="transport-info">包車順路</div>
+                        <div style="font-size:11px; color:#666; margin-top:4px;">Kokusai Street Store</div>
+                        <a href="https://maps.app.goo.gl/8ku7h2LaGn4BkjE77" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
             </div>
@@ -258,13 +281,36 @@
                     </div>
                 </div>
 
-                <div class="card-wrapper t-shop">
+                <div class="card-wrapper t-spot">
+                    <span class="time-label">09:30</span>
+                    <span class="type-tag">景點</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🏯 轉乘至首里門</h3>
+                        <div class="transport-info">🚶 步行 或 🚌 巴士8號</div>
+                        <span class="cost">¥1,350</span>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Shureimon+Gate" target="_blank" class="map-btn">Google Maps</a>
+                    </div>
+                </div>
+
+                <div class="card-wrapper t-flight">
                     <span class="time-label">11:30</span>
+                    <span class="type-tag">交通</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🚌 前往永旺夢樂城 (轉乘)</h3>
+                        <div class="transport-info">單軌 (首里→旭橋)</div>
+                        <span class="cost">¥3,060</span>
+                    </div>
+                </div>
+
+                <div class="card-wrapper t-shop">
+                    <span class="time-label">12:00</span>
                     <span class="type-tag">購物</span>
                     <div class="dot"></div>
                     <div class="card">
                         <h3>🛍️ 永旺夢樂城 Rycom</h3>
-                        <div class="transport-info">🚌 單軌轉高速巴士 152</div>
+                        <div class="transport-info">🚌 高速巴士 152</div>
                         <span class="cost">¥8,910</span>
                         <div style="margin-top:5px; font-size:12px; color:#888;">沖繩最大購物中心</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Aeon+Mall+Okinawa+Rycom" target="_blank" class="map-btn">Google Maps</a>
@@ -280,7 +326,7 @@
                         <div class="transport-info">🚌 巴士 96號</div>
                         <span class="cost">¥3,240</span>
                         <div style="margin-top:5px; font-size:12px; color:#888;">夕陽海灘 / 異國風情晚餐</div>
-                        <a href="https://www.google.com/maps/search/?api=1&query=American+Village+Okinawa" target="_blank" class="map-btn">Google Maps</a>
+                        <a href="https://maps.app.goo.gl/P5Ykxhk1aZbKxRuk7" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
 
@@ -291,6 +337,7 @@
                     <div class="card">
                         <h3>🔙 返回那霸市區</h3>
                         <div class="transport-info">🚌 巴士 28 / 120號</div>
+                        <div style="font-size:11px; color:#666;">至 旭橋/縣廳前</div>
                         <span class="cost">¥7,200</span>
                     </div>
                 </div>
@@ -319,9 +366,19 @@
                     <div class="dot"></div>
                     <div class="card">
                         <h3>⛩️ 波上宮</h3>
-                        <div class="transport-info">🚶 步行或計程車</div>
+                        <div class="transport-info">🚶 步行 或 🚌 單軌</div>
                         <div style="margin-top:5px; font-size:12px; color:#888;">懸崖上的神社</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Naminoue+Shrine" target="_blank" class="map-btn">Google Maps</a>
+                    </div>
+                </div>
+                
+                 <div class="card-wrapper t-flight">
+                    <span class="time-label">10:20</span>
+                    <span class="type-tag">交通</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🚌 前往瀨長島 (轉乘)</h3>
+                        <div class="transport-info">步行至「縣廳北口」</div>
                     </div>
                 </div>
 
@@ -339,14 +396,26 @@
                 </div>
 
                 <div class="card-wrapper t-shop">
-                    <span class="time-label">14:00</span>
+                    <span class="time-label">13:15</span>
                     <span class="type-tag">購物</span>
                     <div class="dot"></div>
                     <div class="card">
                         <h3>🛍️ Outlet Mall Ashibinaa</h3>
                         <div class="transport-info">🚌 巴士 TK02 (往南)</div>
+                        <span class="cost">¥2,250</span>
                         <div style="margin-top:5px; font-size:12px; color:#888;">最後衝刺購物</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Ashibinaa+Outlet+Mall" target="_blank" class="map-btn">Google Maps</a>
+                    </div>
+                </div>
+                
+                <div class="card-wrapper t-flight">
+                    <span class="time-label">15:30</span>
+                    <span class="type-tag">交通</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🔙 回那霸市區 (拿行李)</h3>
+                        <div class="transport-info">🚌 巴士 55/98號</div>
+                        <span class="cost">¥4,500</span>
                     </div>
                 </div>
 
@@ -356,7 +425,8 @@
                     <div class="dot"></div>
                     <div class="card">
                         <h3>🛫 前往那霸機場</h3>
-                        <div class="transport-info">領回行李後前往</div>
+                        <div class="transport-info">單軌 (美榮橋→機場)</div>
+                        <span class="cost">¥2,700</span>
                          <a href="https://maps.app.goo.gl/AqvA7Htpc5A9ucgY9" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
