Add flight schedule details to index.html

--- a/index.html
+++ b/index.html
@@ -119,11 +119,33 @@
             </div>
             <div class="timeline">
                 <div class="card-wrapper t-flight">
+                    <span class="time-label">05:00</span>
+                    <span class="type-tag">集合</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🚩 桃園機場集合</h3>
+                        <div class="transport-info">第二航廈 (T2)</div>
+                        <div style="margin-top:5px; font-size:12px; color:#e03131; font-weight:bold;">請務必準時集合！</div>
+                    </div>
+                </div>
+
+                <div class="card-wrapper t-flight">
+                    <span class="time-label">06:55</span>
+                    <span class="type-tag">起飛</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🛫 飛機起飛 (BR112)</h3>
+                        <div class="transport-info">TPE → OKA</div>
+                        <div style="margin-top:5px; font-size:12px; color:#666;">飛行時間約 1小時20分</div>
+                    </div>
+                </div>
+
+                <div class="card-wrapper t-flight">
                     <span class="time-label">09:15</span>
                     <span class="type-tag">抵達</span>
                     <div class="dot"></div>
                     <div class="card">
-                        <h3>🛬 抵達那霸機場 (BR112)</h3>
+                        <h3>🛬 抵達那霸機場</h3>
                         <div class="transport-info">出關約 1hr</div>
                         <a href="https://maps.app.goo.gl/AqvA7Htpc5A9ucgY9" target="_blank" class="map-btn">Google Maps</a>
                     </div>
@@ -436,8 +458,20 @@
                     <span class="type-tag">起飛</span>
                     <div class="dot"></div>
                     <div class="card">
-                        <h3>🏠 飛機起飛 (BR0185)</h3>
-                        <div style="margin-top:5px; font-size:12px; color:#888;">甜蜜的家</div>
+                        <h3>🛫 飛機起飛 (BR185)</h3>
+                        <div class="transport-info">OKA → TPE</div>
+                        <div style="margin-top:5px; font-size:12px; color:#666;">飛行時間約 1小時45分</div>
+                    </div>
+                </div>
+
+                <div class="card-wrapper t-flight">
+                    <span class="time-label">20:55</span>
+                    <span class="type-tag">抵達</span>
+                    <div class="dot"></div>
+                    <div class="card">
+                        <h3>🏠 抵達桃園機場</h3>
+                        <div class="transport-info">第二航廈</div>
+                        <div style="margin-top:5px; font-size:12px; color:#e03131; font-weight:bold;">平安歸國！</div>
                     </div>
                 </div>
             </div>
