Update card title and timeline time in index.html

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                 <div class="card-col">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">🔙 回那霸市區</div>
+                            <div class="card-title">🔙 回飯店拿行李</div>
                             <div class="type-badge">交通</div>
                         </div>
                         <div class="info-row">🚌 巴士 55/98號</div>
@@ -526,7 +526,7 @@
             </div>
 
             <div class="timeline-item t-flight">
-                <div class="time-col"><div class="time-text">16:40</div></div>
+                <div class="time-col"><div class="time-text">17:00</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
