Revise transportation details in index.html
Updated transportation costs and options throughout the itinerary.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             <div class="type-badge">交通</div>
                         </div>
                         <div class="info-row">🚌 單軌 (機場→美榮橋)</div>
-                        <div class="info-row">💰 ¥2,700</div>
+                        <div class="info-row">💰 ¥320/人</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=JR+Kyushu+Hotel+Blossom+Naha" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
@@ -361,23 +361,8 @@
                             <div class="type-badge">景點</div>
                         </div>
                         <div class="info-row">🚌 單軌 (美榮橋→首里)</div>
-                        <div class="info-row">💰 ¥3,060</div>
+                        <div class="info-row">💰 ¥320/人</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Shuri+Castle" target="_blank" class="map-btn">Google Maps</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="timeline-item t-spot">
-                <div class="time-col"><div class="time-text">09:30</div></div>
-                <div class="line-col"><div class="line"></div><div class="dot"></div></div>
-                <div class="card-col">
-                    <div class="card">
-                        <div class="card-header">
-                            <div class="card-title">🏯 轉乘至首里門</div>
-                            <div class="type-badge">步行</div>
-                        </div>
-                        <div class="info-row">🚶 步行 或 🚌 巴士8號</div>
-                        <a href="https://www.google.com/maps/search/?api=1&query=Shureimon+Gate" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
             </div>
@@ -391,8 +376,7 @@
                             <div class="card-title">🛍️ 永旺夢樂城 Rycom</div>
                             <div class="type-badge">購物</div>
                         </div>
-                        <div class="info-row">🚌 高速巴士 152</div>
-                        <div class="info-row">💰 ¥8,910</div>
+                        <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Aeon+Mall+Okinawa+Rycom" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
@@ -407,7 +391,7 @@
                             <div class="card-title">🎡 美國村 American Village</div>
                             <div class="type-badge">景點</div>
                         </div>
-                        <div class="info-row">🚌 巴士 96號</div>
+                        <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         <a href="https://maps.app.goo.gl/P5Ykxhk1aZbKxRuk7" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
@@ -422,7 +406,7 @@
                             <div class="card-title">🔙 返回那霸市區</div>
                             <div class="type-badge">交通</div>
                         </div>
-                        <div class="info-row">🚌 巴士 28 / 120號</div>
+                        <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         <div class="info-row">📍 至 旭橋/縣廳前</div>
                     </div>
                 </div>
@@ -487,7 +471,7 @@
                             <div class="card-title">✈️ 瀨長島 Umikaji</div>
                             <div class="type-badge">景點</div>
                         </div>
-                        <div class="info-row">🚌 巴士 TK02</div>
+                        <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         <div class="info-row">💰 ¥3,150</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Umikaji+Terrace+Senagajima" target="_blank" class="map-btn">Google Maps</a>
                     </div>
@@ -503,7 +487,7 @@
                             <div class="card-title">🛍️ Outlet Ashibinaa</div>
                             <div class="type-badge">購物</div>
                         </div>
-                        <div class="info-row">🚌 巴士 TK02 (往南)</div>
+                        <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         <div class="info-row">💰 ¥2,250</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Ashibinaa+Outlet+Mall" target="_blank" class="map-btn">Google Maps</a>
                     </div>
@@ -519,7 +503,7 @@
                             <div class="card-title">🔙 回飯店拿行李</div>
                             <div class="type-badge">交通</div>
                         </div>
-                        <div class="info-row">🚌 巴士 55/98號</div>
+                        <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         <div class="info-row">💰 ¥4,500</div>
                     </div>
                 </div>
