Update title and pricing information in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>2026 沖繩家族旅行</title>
+    <title>2026 沖繩旅行</title>
     <style>
         /* 基礎設定 */
         :root { --primary: #2d3436; --bg: #f8f9fa; --line: #e9ecef; }
@@ -488,7 +488,6 @@
                             <div class="type-badge">購物</div>
                         </div>
                         <div class="info-row">🚌 巴士 或 🚕 計程車</div>
-                        <div class="info-row">💰 ¥2,250</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Ashibinaa+Outlet+Mall" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
@@ -504,7 +503,7 @@
                             <div class="type-badge">交通</div>
                         </div>
                         <div class="info-row">🚌 巴士 或 🚕 計程車</div>
-                        <div class="info-row">💰 ¥4,500</div>
+                        <div class="info-row">💰 ¥320/人</div>
                     </div>
                 </div>
             </div>
@@ -519,7 +518,7 @@
                             <div class="type-badge">機場</div>
                         </div>
                         <div class="info-row">🚌 單軌 (美榮橋→機場)</div>
-                        <div class="info-row">💰 ¥2,700</div>
+                        <div class="info-row">💰 ¥320/人</div>
                         <a href="https://maps.app.goo.gl/AqvA7Htpc5A9ucgY9" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
