Update trip title and transportation labels

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>2026 沖繩旅行</title>
+    <title>2026 沖繩家族旅行</title>
     <style>
         /* 基礎設定 */
         :root { --primary: #2d3436; --bg: #f8f9fa; --line: #e9ecef; }
@@ -472,7 +472,6 @@
                             <div class="type-badge">景點</div>
                         </div>
                         <div class="info-row">🚌 巴士 或 🚕 計程車</div>
-                        <div class="info-row">💰 ¥3,150</div>
                         <a href="https://www.google.com/maps/search/?api=1&query=Umikaji+Terrace+Senagajima" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
@@ -503,7 +502,6 @@
                             <div class="type-badge">交通</div>
                         </div>
                         <div class="info-row">🚌 巴士 或 🚕 計程車</div>
-                        <div class="info-row">💰 ¥320/人</div>
                     </div>
                 </div>
             </div>
@@ -514,7 +512,7 @@
                 <div class="card-col">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">🛫 前往那霸機場</div>
+                            <div class="card-title">🚩 前往那霸機場</div>
                             <div class="type-badge">機場</div>
                         </div>
                         <div class="info-row">🚌 單軌 (美榮橋→機場)</div>
@@ -530,7 +528,7 @@
                 <div class="card-col">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">🏠 飛機起飛 (BR185)</div>
+                            <div class="card-title">🛫 飛機起飛 (BR185)</div>
                             <div class="type-badge">OKA-TPE</div>
                         </div>
                         <div class="info-row">⏱️ 飛行約 1小時45分</div>
@@ -544,7 +542,7 @@
                 <div class="card-col">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">🛬 抵達桃園機場</div>
+                            <div class="card-title">🏠 抵達桃園機場</div>
                             <div class="type-badge">TPE</div>
                         </div>
                         <div class="info-row">📍 第二航廈</div>
