Update FunPASS section styles and content

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         .option-title { font-weight: bold; display: block; margin-bottom: 2px; font-size: 14px; }
         .option-desc { font-size: 11px; color: #666; }
 
-        /* FunPASS 清單 */
-        .pass-list { margin: 8px 0; padding: 0; list-style: none; display: grid; grid-template-columns: 1fr 1fr; gap: 8px; }
-        .pass-list li { font-size: 12px; color: #555; display: flex; align-items: center; }
-        .pass-list li::before { content: ""; display: block; width: 6px; height: 6px; background: #ae3ec9; border-radius: 50%; margin-right: 6px; }
+        /* 清單 */
+        .pass-list { margin: 8px 0; padding: 0; list-style: none; display: grid; grid-template-columns: 1fr; gap: 8px; }
+        .pass-list li { font-size: 13px; color: #333; display: flex; align-items: center; font-weight: 500; }
+        .pass-list li::before { content: ""; display: block; width: 6px; height: 6px; background: #20c997; border-radius: 50%; margin-right: 8px; }
 
         /* 顏色主題 */
         .t-flight .dot { border-color: #339af0; } .t-flight .type-badge { background: #e7f5ff; color: #1971c2; }
@@ -121,15 +121,13 @@
                 <a href="https://www.vjw.digital.go.jp/" target="_blank" class="map-btn" style="background:#1971c2;">前往官網登入</a>
             </div>
 
-            <div class="card" style="border-left:4px solid #845ef7;">
-                <div class="card-title">🎟️ Okinawa FunPASS (三合一)</div>
-                <div style="font-size:13px; color:#666; margin-top:8px;">包含項目：</div>
+            <div class="card" style="border-left:4px solid #20c997;">
+                <div class="card-title">🎟️ 景點電子門票 (QR Code)</div>
+                <div style="font-size:13px; color:#666; margin:8px 0;">請事先截圖或準備好 QR Code 入場</div>
                 <ul class="pass-list">
-                    <li>古宇利海洋塔</li>
-                    <li>名護鳳梨園</li>
-                    <li>首里達磨寺御守</li>
+                    <li>古宇利海洋塔 (Ocean Tower)</li>
+                    <li>名護鳳梨園 (Pineapple Park)</li>
                 </ul>
-                <a href="https://okinawa.funpass.app/" target="_blank" class="map-btn" style="background:#845ef7;">APP 介紹</a>
             </div>
         </div>
 
