Remove and update map links in index.html

--- a/index.html
+++ b/index.html
@@ -561,11 +561,6 @@
                             </div>
                         </div>
 
-                        <a href="https://maps.app.goo.gl/BDXBCK2L2cggRusW6" target="_blank" class="option-link" style="margin-top:8px;">
-                            <span class="option-title">📷 KOJIMA x BIC CAMERA</span>
-                            <span class="option-desc">地圖導航</span>
-                        </a>
-
                         <a href="https://www.google.com/maps/search/?api=1&query=Aeon+Mall+Okinawa+Rycom" target="_blank" class="map-btn">Google Maps</a>
                     </div>
                 </div>
@@ -582,7 +577,7 @@
                         </div>
                         <div class="info-row">🚌 巴士 或 🚕 計程車</div>
                         
-                        <a href="https://maps.app.goo.gl/9RsARmGzLN51VLPd6" target="_blank" class="option-link" style="border-color:#ffb74d; background:#fff8e1; margin-top:8px;">
+                        <a href="https://maps.app.goo.gl/aDw3dyii4rNMbC7i6" target="_blank" class="option-link" style="border-color:#ffb74d; background:#fff8e1; margin-top:8px;">
                             <span class="option-title">🔥 寶可夢人孔蓋 (卡蒂狗)</span>
                             <span class="option-desc">尋找第二個卡蒂狗！</span>
                         </a>
