Adjust timeline times and titles in index.html
Updated various time entries and card titles in the timeline.

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             </div>
 
             <div class="timeline-item t-shop">
-                <div class="time-col"><div class="time-text">17:30</div></div>
+                <div class="time-col"><div class="time-text">18:30</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
@@ -544,7 +544,7 @@
             </div>
 
             <div class="timeline-item t-shop">
-                <div class="time-col"><div class="time-text">12:00</div></div>
+                <div class="time-col"><div class="time-text">11:00</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
@@ -601,7 +601,7 @@
             </div>
 
             <div class="timeline-item t-flight">
-                <div class="time-col"><div class="time-text">19:30</div></div>
+                <div class="time-col"><div class="time-text">18:30</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
@@ -610,6 +610,7 @@
                             <div class="type-badge">交通</div>
                         </div>
                         <div class="info-row">🚙 包車</div>
+                        <div class="info-row">📍 至 飯店 (或當日再決定)</div>
                     </div>
                 </div>
             </div>
@@ -665,12 +666,12 @@
             </div>
 
             <div class="timeline-item t-spot">
-                <div class="time-col"><div class="time-text">10:45</div></div>
+                <div class="time-col"><div class="time-text">11:00</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">✈️ 瀨長島 Umikaji</div>
+                            <div class="card-title">🏝️ 瀨長島 Umikaji</div>
                             <div class="type-badge">景點</div>
                         </div>
                         <div class="info-row">🚙 包車</div>
@@ -686,7 +687,7 @@
             </div>
 
             <div class="timeline-item t-shop">
-                <div class="time-col"><div class="time-text">13:15</div></div>
+                <div class="time-col"><div class="time-text">13:00</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
@@ -724,26 +725,12 @@
             </div>
 
             <div class="timeline-item t-flight">
-                <div class="time-col"><div class="time-text">15:30</div></div>
-                <div class="line-col"><div class="line"></div><div class="dot"></div></div>
-                <div class="card-col">
-                    <div class="card">
-                        <div class="card-header">
-                            <div class="card-title">🔙 回飯店拿行李</div>
-                            <div class="type-badge">交通</div>
-                        </div>
-                        <div class="info-row">🚙 包車</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="timeline-item t-flight">
                 <div class="time-col"><div class="time-text">16:30</div></div>
                 <div class="line-col"><div class="line"></div><div class="dot"></div></div>
                 <div class="card-col">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">🚩 前往那霸機場</div>
+                            <div class="card-title">🔙 回飯店拿行李 & 前往機場</div>
                             <div class="type-badge">機場</div>
                         </div>
                         <div class="info-row">🚌 單軌 (美榮橋→機場)</div>
